# CC-course-finder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/assist/: __init__.py  cli.py  config.py  discovery.py  fetch.py  http.py  models.py  normalize.py  parser.py  pipeline.py  service.py  store.py
src/schedule/: __init__.py  banner_ellucian.py  banner_ssb_classic.py  catalog.py  cli.py  colleague.py  composite.py  marin_colleague.py  models.py  pilot_evergreen.py  providers.py  service.py  smcccd_colleague.py  term.py  vsb_4cd.py  wvm_static.py
src/schedule/data/: colleges.json
src/web/: app.py  join.py
src/web/routers/: ingest.py  schools.py  search.py
src/web/static/: style.css
src/web/templates/: index.html
tests/assist/: test_discovery.py  test_fetch.py  test_normalize.py  test_pipeline.py  test_store.py
tests/schedule/: test_banner_ellucian.py  test_banner_ssb_classic.py  test_catalog.py  test_cli.py  test_colleague.py  test_marin_colleague.py  test_pilot_provider.py  test_service.py  test_smcccd_colleague.py  test_term.py  test_vsb_4cd.py  test_wvm_provider.py
tests/web/: test_ingest.py  test_join.py  test_routes.py
